# coral_model

./: CMakeLists.txt  main.cpp  vcpkg.json
coral_base/: coral.cpp  coral.h
glad/include/glad/: glad.h
glad/src/: glad.c
model/: coral.cpp  coral.h  environment.cpp  environment.h
utils/: misc.h  pair_hash.h  random.h  union_set.h
viewer/: viewer.cpp  viewer.h
